# Projeto-Machine-Learning-aprendendo-a-identificar-se-Smartphone-ou-Tablet

./: README.md  pyproject.toml  testes.ipynb
