[tool.poetry]
name = "machine-learning-reconhecendo-padroes-com-ml"
version = "0.1.0"
description = ""
authors = ["Luís Paulo da Silva de Siqueira <l.paulo333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
